# personal-app

./: docker-compose.yml
backend/: .env  Dockerfile  pyproject.toml
backend/src/backend/: main.py
backend/src/backend/api_routes/: blog.py  category.py
backend/src/backend/databases/: __init__.py  mongo_db.py
backend/src/backend/models/: blogpost.py  category.py
frontend/: .dockerignore  Dockerfile  README.md  env.sh  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/BlogPosts/: BlogPostDetail.css  BlogPostDetail.tsx
frontend/src/components/BlogPosts/cards/: ListViewCard.tsx  ResearchCard.tsx  index.ts
frontend/src/components/BlogPosts/icons/: ArrowLeftIcon.tsx  ChatPromptIcon.tsx  ChevronDownIcon.tsx  CollapsedIcon.tsx  FilterIcon.tsx  PreCollapseIcon.tsx  SearchIcon.tsx  ViewGridIcon.tsx  ViewListIcon.tsx  index.ts
frontend/src/components/BlogPosts/layout/: AboutMeHeader.tsx  Categories.tsx  Header.tsx  MainContent.tsx  Sidebar.tsx  SortDropdown.tsx
frontend/src/pages/: AboutMePage.tsx  BlogPostsPage.module.css  BlogPostsPage.tsx
frontend/src/services/: blogService.ts  categoryService.ts
frontend/src/types/: blog.ts  navigation.ts  research.ts
