[tool.poetry]
name = "backend"
version = "0.1.0"
description = "My backend application" # It's good practice to add a short description
authors = ["Nikola Nikolovski <nikolovski.nikola42@gmail.com>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.14,<0.116.0"
python-multipart = ">=0.0.20,<0.0.21"
uvicorn = ">=0.35.0,<0.36.0"
pydantic = ">=2.11.7,<3.0.0"
motor = ">=3.7.1,<4.0.0"
pymongo = ">=4.13.2,<5.0.0"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
